testing overflow issue

--- a/css/loginStyles.css
+++ b/css/loginStyles.css
@@ -6,7 +6,7 @@ body
 	min-height: 100vh;
 	font-family: 'Poppins', sans-serif;
     	background-image: linear-gradient(120deg, #453f97, #804480);
-	overflow-y: 100%;
+	overflow-y: auto;
 }
 
 #title 
